fdo#56976 fixes up Arrow import bug

Importing an LibreOffice upArrow from an pptx document caused it and several custom shapes go down the drain.
That was perhaps a memory violation because the procedure to generate it in working memory was missing.
This patch gets you that procedure. Note it cannot be manipulated yet.

Change-Id: I8b9ce3ae1aef7894ab04b9857e90831d715ec1d5
Signed-off-by: Lennard <Wasserthal@nefkom.net>